--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,14 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    border: black solid 1px;
+    box-shadow: black 0 0 10px;
+    border-radius: 5px;
+}
+.card-left {
+    margin-left: 2vw;
+}
+.card-left p {
+    margin-left: 2vw;
 }
 .main-data {
     font-size: larger;
@@ -13,4 +20,9 @@
     flex-direction: row;
     justify-content: flex-start;
     align-content: center;
+}
+.photo {
+    overflow: auto;
+    border-radius: 5px;
+    margin: 1%;
 }
