--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,223 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+:root {
+    --index: calc(1vw + 1vh);
+    --text-color: #e7e7d3;
+    --transition: transform .75s cubic-bezier(.075, 0.5, 0, 1);
+}
+
+@font-face {
+    font-family: raleway_f;
+    src: url(../fonts/raleway-regular.woff2);
+}
+
+@font-face {
+    font-family: raleway_f;
+    src: url(../fonts/raleway-black.woff2);
+    font-weight: 900;
+}
+
+body {
+    background-color: #010101;
+    font-family: raleway_f;
+    line-height: 1.55;
+    color: white;
+}
+
+.main-header {
+    position: relative;
+}
+
+.main-header::after {
+    content: '';
+    position: absolute;
+    z-index: 100;
+    width: 100%;
+    height: calc(var(--index) * 10);
+    background-image: url(../img/ground.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    bottom: calc(var(--index) * -4.5);
+}
+
+.layers {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    overflow: hidden;
+    position: relative;
+}
+
+.layer {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background-size: cover;
+    background-position: center;
+    will-change: transform;
+    z-index: 2;
+    transition: var(--transition);
+}
+
+.layers__base {
+    transform: translate3d(0, calc(var(--scrollTop) /1.6), 0);
+    z-index: 0;
+}
+
+.layers__middle {
+    transform: translate3d(0, calc(var(--scrollTop) / 2.5), 0);
+}
+
+.layers__front {
+    transform: translate3d(0, calc(var(--scrollTop) / 5.5), 0);
+}
+
+.layer__header {
+    z-index: 1;
+    transform: translate3d(0, calc(var(--scrollTop) / 2), 0);
+    will-change: transform;
+    text-transform: uppercase;
+    font-weight: 900;
+    color: var(--text-color);
+    text-shadow: #bda266 0 0 15px;
+    transition: var(--transition);
+}
+
+.layers__title {
+    font-size: calc(var(--index) * 2.5);
+    letter-spacing: calc(var(--index) / 3.5);
+}
+
+.layers__caption {
+    font-size: calc(var(--index) / 1.175);
+    letter-spacing: calc(var(--index) / 3.5);
+    margin-top: calc(var(--index) * -3.75);
+}
+
+.main-article {
+    --main-article: translate3d(0, calc(var(--scrollTop) / -10), 0);
+    position: relative;
+    background-size: cover;
+    background-position: center;
+    color: var(--text-color);
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.main-article__content {
+    text-align: center;
+}
+
+.main-article__header {
+    text-transform: uppercase;
+    font-size: calc(var(--index) * 1.8);
+    letter-spacing: calc(var(--index) / 7.8);
+    transform: var(--main-article);
+    will-change: transform;
+    transition: var(--transition);
+}
+
+.main-article__paragraph {
+    font-size: calc(var(--index) * .9);
+    letter-spacing: calc(var(--index) / 5.8);
+    max-width: calc(var(--index) * 30);
+    margin-top: calc(var(--index) / 1.25);
+    transform: var(--main-article);
+    will-change: transform;
+    transition: var(--transition);
+}
+/*/////////////////*/
+.button {
+    position: relative;
+    color: var(--button-color);
+    display: inline-block;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: calc(var(--index) * 0.1);
+    font-size: calc(var(--index) * .9);
+    overflow: hidden;
+    padding: calc(var(--index) * .5) calc(var(--index) * 2);
+    transition: 0.5s;
+}
+
+.button:hover {
+    box-shadow: 0 0 10px var(--button-color);
+    transition-delay: .40s;
+    background-color: var(--button-color);
+    color: black;
+}
+
+.button-line {
+    position: absolute;
+    display: block;
+}
+
+.button-line__top {
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: calc(var(--index) / 20);
+    background: linear-gradient(90deg, transparent, var(--button-color));
+}
+
+.button:hover .button-line__top {
+    left: 100%;
+    transition: 1s;
+    transition-delay: 0.25s;
+}
+
+.button-line__bottom {
+    bottom: 0;
+    right: -100%;
+    width: 100%;
+    height: calc(var(--index) / 20);
+    background: linear-gradient(270deg, transparent, var(--button-color));
+}
+
+.button:hover .button-line__bottom {
+    right: 100%;
+    transition: 1s;
+    transition-delay: 0.25s;
+}
+.button-line__left {
+    left: 0;
+    bottom: -100%;
+    height: 100%;
+    width: calc(var(--index) / 20);
+    background: linear-gradient(0deg, transparent, var(--button-color));
+}
+
+.button:hover .button-line__left {
+    bottom: 100%;
+    transition: 1s;
+    transition-delay: 0s;
+}
+.button-line__right {
+    top: -100%;
+    right: 0;
+    height: 100%;
+    width: calc(var(--index) / 20);
+    background: linear-gradient(180deg, transparent, var(--button-color));
+}
+
+.button:hover .button-line__right {
+    top: 100%;
+    transition: 1s;
+    transition-delay: 0s;
+}
+.content {
+    will-change: transform;
+}
+
 .card {
     display: flex;
     flex-direction: row;
@@ -33,10 +253,11 @@
     justify-content: flex-start;
     align-content: center;
     align-items: center;
-    height: 5vh;
+    height: calc(var(--index) * 4);
     border-radius: 5px;
     box-shadow: black 0 0 10px;
 }
 .main-buttons {
+    --button-color: #7488ff;
     margin: 2vw;
 }
