--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
 :root {
     --index: calc(1vw + 1vh);
     --text-color: #e7e7d3;
+    --button-color: #e7e7d3;
     --transition: transform .75s cubic-bezier(.075, 0.5, 0, 1);
 }
 
@@ -72,7 +73,7 @@ body {
 }
 
 .layers__middle {
-    transform: translate3d(0, calc(var(--scrollTop) / 2.5), 0);
+    transform: translate3d(0, calc(var(--scrollTop) / 3.5), 0);
 }
 
 .layers__front {
@@ -258,6 +259,5 @@ body {
     box-shadow: black 0 0 10px;
 }
 .main-buttons {
-    --button-color: #7488ff;
     margin: 2vw;
 }
