--- a/css/style.css
+++ b/css/style.css
@@ -140,7 +140,7 @@ body {
 }
 
 .main-article__skills {
-    transform: translate3d(0, calc(var(--scrollTop) / 50), 0);
+    transform: translate3d(0, calc(var(--scrollTop) / 20), 0);
     z-index: 0;
     height: calc(var(--index) * 35);
     width: calc(var(--index) * 50);
@@ -322,9 +322,9 @@ i {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background: rgb(255, 255, 255);
     width: 100%;
     height: 100%;
+    background-size: cover;
     border-radius: calc(var(--index) * .4);
     color: #000000;
     will-change: transform;
